# umod4

./: .gitattributes  .gitignore  BENCH_TESTING.md  BUILDING.md  BenchTesting.md  Bugs.md  CLAUDE.md  CMakeLists.txt  DEBUGGING.md  DataLogConversion.md  DataVisualizer.spec  FILE_UPLOAD_FEATURE.md  Fabrication.md  GETTING_STARTED.md  ImageManagement_V2.md  LICENSE.md  LOGID_METADATA_PLAN.md  README.md  STATUS.md  TestBench.md  Testing.md  ToDo.md  Tools.md
.github/workflows/: pyinstaller-diagnostics.yml  visualizer-release.yml
EP/: CMakeLists.txt  README.md  README_BSON.md  ToDo.md  gen_build_info.cmake
EP/src/: EP_log.h  EpromLoader.cpp  EpromLoader.h  README.md  RP58_memorymap.h  bsonlib.cpp  bsonlib.h  build_info.h  busFailsafe.pio  busFailsafeSetup.cpp  busFailsafeSetup.h  config.h  ep_flash_layout.h  ep_rtt.h  epromEmulator.S  epromEmulator.h  hardware.h  hc11Sync.pio  hc11SyncSetup.cpp  hc11SyncSetup.h  image_store_config.json  main.cpp  memmap_eprom.ld  test.cpp  uart_tx32.pio  umod4_EP.h
SwdReflash/: CMakeLists.txt
SwdReflash/src/: FlashBuffer.h  main.c  memmap_ram.ld
WP/: CMakeLists.txt  OtaReflashModel.md  README.md  ToDo.md  WiFi.md  partition_table.json
WP/doc/: MDL_Architecture.md  MDL_Phase6_Summary.md  SDIO_DEBUGGING_LOG.md  SDIO_FRESH_START.md  SDIO_SPEED_ANALYSIS.md  USB-Ethernet-Status.md  Windows_Firewall_Setup.md
WP/src/: BoardRev.cpp  BoardRev.h  Clock.cpp  Clock.h  Crc.cpp  Crc.h  EpUart.cpp  EpUart.h  FlashConfig.cpp  FlashConfig.h  FlashEp.cpp  FlashEp.h  FlashWp.cpp  FlashWp.h  FreeRTOSConfig.h  Gps.cpp  Gps.h  Heap.cpp  Heap.h  HttpClient.cpp  HttpClient.h  LogStore.cpp  LogStore.h  LogUploader.cpp  LogUploader.h  Logger.cpp  Logger.h  NeoPixelConnect.cpp  NeoPixelConnect.h  NetworkManager.cpp  NetworkManager.h  Psm.cpp  Psm.h  SWDLoader.cpp  SWDLoader.h  SdCard.cpp  SdCard.h  SdCardBase.h  SdCardSDIO.cpp  SdCardSDIO.h  (+72 more)
WP/src/sdio/: sdio_rp2350.cpp  sdio_rp2350.h  sdio_rp2350.pio  sdio_rp2350.pio.h  sdio_rp2350_config.h
WP/src/swd/: README.md
WP/tools/: makefsdata
WP/www/: console.html  ecu_live.html  ep_stdio.html  eprom_info.html  index.html  internals.html  sd_info.html  status.html  style.css  system.html  tasks.html  tps_cal.html  wifi_config.html
WpUsbBoot/: CMakeLists.txt  main.c
cmake/: check_udev_rules.cmake
cmake/toolchains/: arm-none-eabi.cmake  host.cmake
doc/: DataFlow.pptx  DataStream.pptx  chunked-log-storage-design.md
ecu/: CMakeLists.txt  README.md  patch_metadata.py
ecu/doc/: Ignition.md  Operation.md  README.md  TPS_OPERATION.md
eprom_lib/: .gitattributes  CMakeLists.txt  README.md
images/: .gitignore
logView/: BUGS.md  BUILDING.md  CMakeLists.txt  DEVELOPMENT.md  FEATURES.md  Makefile  README.md  README_STREAMING.md  ROADMAP.md  STATUS.md  STREAMING_ARCHITECTURE.md  TEST_RESULTS.md  TODO_COMPLETE_IMPLEMENTATION.md  WSL_GUIDE.md  bundle.py  index.html  index_streaming.html  logchunkdecoder.py  logindexer.py  logserver.py  requirements_server.txt  test_viewer.sh  viewer_bundle.html  viewer_prototype.html
logView/js/: constants.js  fileManager.js  parser.js  search.js  streamingRenderer.js  textRenderer.js  virtualRenderer.js
tests/: README.md  TEST_PLAN.md  nightly_run.sh  runner.py
tools/: CMakeLists.txt  DIAGNOSTICS_INDEX.md  DIAGNOSTIC_ARCHITECTURE.md  DIAGNOSTIC_SYSTEM_README.md  DIAGNOSTIC_TOOLS_SUMMARY.md  GETTING_STARTED.md  PYINSTALLER_DIAGNOSTICS.md  QUICK_REFERENCE.md  README_HDF5.md  README_LogDecoder.md  README_StreamConfig.md  README_Visualizer.md  README_Visualizer_User_Guide.md  REAL_WORLD_WORKFLOW.md  RELEASING.md  TRY_ME.txt  analyze_existing_build.sh  build-release.sh  diagnose_pyinstaller.sh  flash_EP  flash_WP  flash_ap_proxy  prep_WP  set_credentials  setup_nightly_tests  setup_nightly_tests.ps1  setup_usb_wsl  setup_usb_wsl.ps1  uf2decoder.py  wp_enter_bootsel
tools/ap_proxy/: CMakeLists.txt  SETUP.md  lwipopts.h  main.c  smoke_test.py  usb_ids.txt
tools/logtools/decoder/: conversions.py  decodelog.py  log_convert.py
tools/logtools/test_data/: README.md  log_3.um4
tools/logtools/viz/: DataVisualizer-Windows.spec  ENABLE_DIAGNOSTICS.md  diagnostic_wrapper.py  pyi_rth_fix_viz_path.py  requirements.txt  self_diagnostic.py  stream_config.py  stream_config.yaml  viz.py
tools/logtools/viz/hooks/: hook-viz_components.py
tools/logtools/viz/viz_components/: __init__.py
tools/logtools/viz/viz_components/config/: __init__.py  app_config.py  per_file_settings.py  unit_converter.py
tools/logtools/viz/viz_components/data/: __init__.py  hdf5_loader.py
tools/logtools/viz/viz_components/navigation/: __init__.py  view_controller.py  view_history.py
tools/logtools/viz/viz_components/rendering/: __init__.py  decimation.py  normalization.py
tools/logtools/viz/viz_components/utils/: __init__.py  color_utils.py
tools/logtools/viz/viz_components/widgets/: __init__.py  color_checkbox.py  draggable_list.py  resizable_splitter.py  stream_checkbox.py  zoomable_graph.py
tools/server/: PHASE0_SUMMARY.md  README.md  checkin_listener.py  connectivity_checker.py  device_client.py  device_client.py.original  device_manager.py  http_server.py  requirements.txt  run_server.sh  test_chunked_upload.py  test_client.py  timeout_monitor.py  umod4_server.py
tools/server/gui/: __init__.py  device_config_dialog.py  device_files_dialog.py  main_window.py  manage_devices_dialog.py
tools/server/models/: __init__.py  app_settings.py  database.py
tools/server/tests/: test_checkin.py  test_server_headless.py
tools/src/: .gitignore  bin-to-bson.py  bin2c.py  build-image-store.py  check_h5_datasets.py  checksum.cpp  conversions.py  decodelog.py  gen_logmeta.py  generate_encoder.py  h2py.py  logsyms.py  stream_config.py  stream_config.yaml  verify_hdf5.py  vfyUf2.py  viz.py
tools/src/viz_components/config/: per_file_settings.py  unit_converter.py
tools/src/viz_components/data/: data_manager.py
tools/src/viz_components/navigation/: view_history.py
tools/src/viz_components/rendering/: normalization.py
tools/src/viz_components/widgets/: resizable_splitter.py  zoomable_graph.py
(+59 files in other folders)
